# parliament_visualiser

./: .gitignore  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  generate-template-envs.sh  package-lock.json
.github/workflows/: testing.yml
backend/: .env.example  Dockerfile  app.js  eslint.config.mjs  index.js  package-lock.json  package.json
backend/controllers/: memberofparliament.js  party.js  seatingofparliament.js  speech.js  valihuuto.js
backend/databases/: database.db
backend/pictures/: compress.sh
backend/scripts/: db_util.py  downloadDocuments.py  download_images.py  extractVälihuudot.py  findPicture.py  getData.py  requirements.txt  updateMemberData.py  updateSeatingplan.py  updateValihuudot.py  update_member_of_parliament.py  update_seating_of_parliament.py  update_valihuudot.py  välihuudot.py
backend/tests/: memberofparliament.test.js  party.test.js  setup.js  speech.test.js  (+1 more)
data_management/: .env.example  Dockerfile  check_db_initialized.py  entrypoint.sh  main.py  pyproject.toml
data_management/asset_tools/: download_documents_2024.py  download_documents_2025.py  download_images.py  findPicture.py
data_management/db_ops/: db_util.py  extractVälihuudot.py  extract_speeches.py  extract_välihuudot.py  getData.py  update_member_of_parliament.py  update_seating_of_parliament.py  update_speeches.py  update_valihuudot.py  välihuuto.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  vite.config.ts
nginx/: nginx.conf
remix-app/: Dockerfile  package-lock.json  package.json  vite.config.js
(+81 files in other folders)
